feat: guests patch endpont + richer swagger docs
